update DuoLingo analysis

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ ds74_student_step_All_Data_65_2021_0810_051112.txt
 ds74_tx_All_Data_65_2021_0810_050335.txt
 learning_traces.13m.csv
 
-.csv
+*.csv
 
 
 
+.Rhistory
